--- a/.github/workflows/run-e2e.yml
+++ b/.github/workflows/run-e2e.yml
@@ -32,14 +32,22 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
 
+      - name: Setup Cypress cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/Cypress
+          key: ${{ runner.os }}-cypress-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-cypress-
+
       - name: Install dependencies
         run: pnpm install
 
+      - name: Verify Cypress binary
+        run: npx cypress verify
+
       - name: Cypress run
         uses: cypress-io/github-action@v6
-        env:
-          APP_URL: "http://localhost:3000"
-          NEXT_PUBLIC_API_BASE_URL: "https://api-techstore.vercel.app"
         with:
-          build: npm run build
-          start: npm start
+          build: pnpm run build
+          start: pnpm start
