--- a/.github/workflows/run-e2e.yml
+++ b/.github/workflows/run-e2e.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Install Cypress binary
+        run: npx cypress install
+
       - name: Verify Cypress binary
         run: npx cypress verify
 
