--- a/.github/workflows/run-e2e.yml
+++ b/.github/workflows/run-e2e.yml
@@ -5,6 +5,9 @@ on: push
 jobs:
   cypress-run:
     runs-on: ubuntu-22.04
+    env:
+      APP_URL: ${{ secrets.APP_URL }}
+      NEXT_PUBLIC_API_BASE_URL: ${{ secrets.NEXT_PUBLIC_API_BASE_URL }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -48,6 +51,9 @@ jobs:
 
       - name: Verify Cypress binary
         run: npx cypress verify
+
+      - name: Build project
+        run: pnpm run build
 
       - name: Cypress run
         uses: cypress-io/github-action@v6
